[project]
name = "aternos-watcher"
version = "1.0.0"
description = "A strictly typed Aternos server watcher that filters out ghost proxies."
requires-python = ">=3.13"
dependencies = [
    "mcstatus>=12.0.6",
    "discord-webhook>=1.4.1",
    "python-dotenv>=1.2.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
